Update text content of *métiers* page

--- a/src/pages/metiers.astro
+++ b/src/pages/metiers.astro
@@ -1,31 +1,31 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import Banner from "@components/ui/banner.astro";
-import CallToAction from "@components/ui/call_to_action.astro";
+//import CallToAction from "@components/ui/call_to_action.astro";
 import ListCard from "@components/ui/list_card.astro";
 import { BackgroundColor, BorderColor, TextColor } from "@libs/types";
 
-import EcosystemeTechnologiqueReference from "@static/expertise-technos.avif";
-import LoggersBannerReference from "@static/loggers-banner.avif";
+//import EcosystemeTechnologiqueReference from "@static/expertise-technos.avif";
+import LoggersBannerReference from "@static/metiers-1.avif";
 
 const bannerImage = {
     src: LoggersBannerReference,
-    width: 505,
-    height: 434,
+    width: 1249,
+    height: 980,
 }
 ---
 
 <BaseLayout title="Nos métiers">
     <Banner
-        title="Nos métiers"
-        subtitle="Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum."
-        description="Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum."
+        title="Notre métier"
+        subtitle="Accélérer et sécuriser la transformation des organisations en les guidant dans l'adoption des technologies Cloud et de la philosophie DevOps"
+        description="Audits, Stratégie, Roadmap, FinOps ? Conception, Architecture ? Gestion de projets techniques ? Automatisation, CI/CD ? C’est le métier de LOG !"
         bgColor={BackgroundColor.BLUE}
         textColor={TextColor.BLUE}
         image={bannerImage}
     />
     <section class="relative max-w-7xl mx-auto text-center">
-        <h1 class="font-bold text-3xl uppercase">Nos savoirs-faires</h1>
+        <h1 class="font-bold text-3xl uppercase">Nos savoir-faire</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-16 px-3">
             <ListCard title="Cloud Strategy" textColor={TextColor.BLUE} borderColor={BorderColor.BLUE}>
                 <svg slot="svg" class="w-auto h-20" viewBox="0 0 158.09 162.96"><path d="M57.85 7.14c-3.19 0-5.79 2.58-5.79 5.76a5.81 5.81 0 0 0 5.79 5.79c3.19 0 5.76-2.6 5.76-5.79s-2.58-5.76-5.76-5.76zm0 7.95a2.21 2.21 0 0 1-2.21-2.21c0-1.22.99-2.18 2.21-2.18s2.18.98 2.18 2.18-.96 2.21-2.18 2.21z" fill="#e94266"/><path d="M30.28 135.98c-.33-.35-.8-.55-1.27-.55H14.9c-1 0-1.79.79-1.79 1.79v10.58c0 1 .79 1.79 1.79 1.79h14.08c1 0 1.79-.79 1.79-1.79v-10.56c.02-.47-.16-.91-.49-1.26zm-13.6 10.03v-7h10.51v7z" fill="#fff042"/><path d="M52.92 118.28H38.84c-1 0-1.79.79-1.79 1.79v27.73c0 1 .79 1.79 1.79 1.79h14.08c1 0 1.79-.79 1.79-1.79v-27.73a1.79 1.79 0 0 0-1.79-1.79zm-12.29 27.73v-24.15h10.51v24.15z" fill="#71c8e2"/><path d="M76.86 107.96H62.77c-1 0-1.79.79-1.79 1.79v38.05c0 1 .79 1.79 1.79 1.79h14.09c1 0 1.79-.79 1.79-1.79v-38.05c0-.97-.82-1.79-1.79-1.79zm-1.79 3.58v34.47H64.56v-34.47z" fill="#1d1d1b"/><path d="M100.77 128.26H86.69c-1 0-1.79.79-1.79 1.79v17.77c0 1 .79 1.79 1.79 1.79h14.08c1 0 1.79-.79 1.79-1.79v-17.77c0-1-.79-1.79-1.79-1.79zm-12.3 17.75v-14.2h10.51v14.2z" fill="#e94266"/><path d="M103.28 45.97a1.76 1.76 0 0 0-1.27-.52H56.5c-1 0-1.79.79-1.79 1.79s.79 1.79 1.79 1.79H102c1 0 1.79-.79 1.79-1.79 0-.48-.18-.93-.52-1.27zm-70.02-5.24H19.51c-3.18 0-5.76 2.58-5.76 5.76V60.4c0 3.18 2.58 5.76 5.76 5.76h13.75c3.18 0 5.76-2.58 5.76-5.76V46.49c0-3.18-2.58-5.76-5.76-5.76zm-15.93 5.76c0-1.2.98-2.18 2.18-2.18h13.75c1.2 0 2.18.98 2.18 2.18v13.9c0 1.2-.98 2.18-2.18 2.18H19.51c-1.2 0-2.18-.98-2.18-2.18zm15.93 29.5H19.51c-3.18 0-5.76 2.58-5.76 5.76v13.9c0 3.18 2.58 5.76 5.76 5.76h13.75c3.18 0 5.76-2.58 5.76-5.76v-13.9c0-3.18-2.58-5.76-5.76-5.76zm-15.93 5.76c0-1.2.98-2.18 2.18-2.18h13.75c1.2 0 2.18.98 2.18 2.18v13.9c0 1.2-.98 2.18-2.18 2.18H19.51c-1.2 0-2.18-.98-2.18-2.18zM84.6 57.89H54.65c-1 0-1.79.79-1.79 1.79s.79 1.79 1.79 1.79H84.6c1 0 1.79-.79 1.79-1.79s-.79-1.79-1.79-1.79z" fill="#1d1d1b"/><path d="M100.15 80.69h-45.5c-1 0-1.79.79-1.79 1.79s.79 1.79 1.79 1.79h45.5c1 0 1.79-.79 1.79-1.79s-.79-1.79-1.79-1.79z" fill="#71c8e2"/><path d="M84.6 93.13H54.65c-1 0-1.79.79-1.79 1.79s.79 1.79 1.79 1.79H84.6a1.79 1.79 0 0 0 1.79-1.79 1.78 1.78 0 0 0-1.79-1.79z" fill="#1d1d1b"/><path d="M31.72 50.11c-.29-.38-.71-.62-1.19-.67a1.74 1.74 0 0 0-1.32.38l-4.13 3.29-1.13-1.54a1.82 1.82 0 0 0-2.5-.39 1.8 1.8 0 0 0-.39 2.5l2.22 3.04c.29.39.72.65 1.28.72h.18c.39 0 .78-.14 1.11-.39l5.59-4.43a1.74 1.74 0 0 0 .67-1.19 1.74 1.74 0 0 0-.37-1.31z" fill="#61bda5"/><path d="M31.71 85.36c-.63-.76-1.74-.89-2.53-.28l-4.14 3.29-1.13-1.54a1.8 1.8 0 0 0-2.5-.39c-.78.58-.96 1.72-.39 2.51l2.24 3.04c.29.39.72.65 1.28.72h.18a1.83 1.83 0 0 0 1.11-.39l5.59-4.43c.38-.29.62-.71.67-1.19.06-.47-.08-.96-.38-1.33z" fill="#fff042"/><path d="M154.41 33.32l-4.17-.79c-.38-.07-.67-.36-.79-.8-.69-2.52-1.72-5.02-3.07-7.42-.21-.36-.21-.8 0-1.12l2.35-3.46c1.21-1.81.98-4.26-.55-5.82l-4-4c-1.53-1.53-3.97-1.77-5.79-.55l-3.48 2.35c-.3.2-.75.2-1.1 0-2.3-1.31-4.79-2.33-7.38-3.04-.42-.12-.74-.44-.81-.8l-.77-4.13c-.41-2.16-2.3-3.74-4.49-3.74h-5.65c-2.2 0-4.09 1.57-4.49 3.74l-.78 4.13c-.07.37-.36.67-.78.79-2.6.71-5.09 1.73-7.4 3.05-.34.2-.77.2-1.08-.01l-3.51-2.37a4.59 4.59 0 0 0-5.79.58l-4 4c-1.41 1.41-1.73 3.55-.86 5.3h-2.29v-2.03c0-2.88-2.34-5.22-5.22-5.22h-6.64C70.77 5.14 64.8.04 57.82.04s-12.9 5.09-14.03 11.92h-6.64c-2.86 0-5.19 2.34-5.19 5.22v2.03H12.93C5.8 19.21 0 25.01 0 32.14v117.89c0 7.13 5.8 12.93 12.93 12.93h89.83c4.25 0 8.21-2.1 10.66-5.62h2.83c1.98 0 3.67-1.41 4.03-3.35l.64-3.43c.04-.2.22-.37.44-.44 2.19-.6 4.28-1.47 6.19-2.57.22-.12.47-.13.62-.03l2.89 1.96c1.62 1.12 3.81.92 5.21-.47l3.33-3.33c1.38-1.38 1.59-3.57.5-5.22l-1.96-2.89c-.1-.16-.09-.4.02-.61 1.15-2.06 2.02-4.15 2.57-6.22.07-.25.23-.42.44-.45l3.4-.64c1.94-.35 3.35-2.05 3.35-4.03v-4.69c0-1.98-1.41-3.67-3.35-4.03l-3.4-.64c-.2-.04-.37-.22-.44-.44-.61-2.19-1.47-4.29-2.57-6.22-.12-.22-.13-.47-.03-.62l1.96-2.89c1.12-1.62.91-3.82-.5-5.23l-3.33-3.33c-1.38-1.38-3.57-1.58-5.2-.47l-2.88 1.96c-.16.1-.4.09-.61-.02a26.74 26.74 0 0 0-6.2-2.57c-.26-.08-.44-.24-.47-.44l-.64-3.43c-.35-1.94-2.05-3.35-4.03-3.35h-.56v-8.16h4.66c2.2 0 4.08-1.56 4.49-3.71l.78-4.13c.07-.36.38-.67.8-.79 2.54-.69 5.03-1.71 7.39-3.04.36-.21.81-.21 1.12 0l3.48 2.35c1.82 1.24 4.25 1.02 5.79-.52l4-4a4.58 4.58 0 0 0 .55-5.82l-2.34-3.37c-.2-.3-.2-.75 0-1.1a31.71 31.71 0 0 0 3.06-7.41c.13-.45.42-.74.8-.81l4.1-.77c2.16-.41 3.74-2.3 3.74-4.49v-5.66c-.03-2.2-1.57-4.07-3.67-4.47zm-8.43 15.23c-.63 2.29-1.55 4.52-2.74 6.62-.86 1.55-.8 3.47.15 4.88l2.35 3.46c.27.39.22.92-.12 1.27l-4 4c-.34.34-.84.38-1.25.09l-3.48-2.35c-1.41-.95-3.33-1.01-4.89-.15-2.02 1.16-4.23 2.07-6.6 2.71-1.71.49-3 1.86-3.35 3.59l-.77 4.13c-.09.47-.5.8-.98.8h-4.66V59.36c5.15.5 10.29-1.16 14.21-4.6 4.08-3.59 6.43-8.74 6.43-14.12 0-10.38-8.44-18.82-18.82-18.82-1.96 0-3.95.32-5.91.96a12.94 12.94 0 0 0-6.35-3.28c-.83-.16-1.67-.24-2.49-.24H90.23l-1.01-1.49a1 1 0 0 1 .12-1.27l4-4c.32-.32.86-.37 1.25-.12l3.51 2.37c1.44.98 3.36 1.04 4.89.15 2.06-1.16 4.27-2.06 6.57-2.69 1.72-.49 3-1.86 3.35-3.59l.77-4.15c.09-.47.5-.8.98-.8h5.65a1 1 0 0 1 .98.8l.77 4.13c.32 1.68 1.63 3.08 3.35 3.56 2.31.63 4.53 1.54 6.6 2.71 1.55.86 3.46.8 4.88-.15l3.49-2.35a.97.97 0 0 1 1.24.1l4 4c.35.35.4.86.12 1.27l-2.35 3.46c-.98 1.44-1.04 3.31-.15 4.88 1.21 2.16 2.13 4.39 2.74 6.63.49 1.72 1.86 3 3.59 3.35l4.1.77c.47.09.8.5.8.98v5.6c0 .48-.34.89-.81.98l-4.13.78c-1.71.35-3.07 1.63-3.56 3.35zm-32-22.75c1.15-.28 2.33-.43 3.54-.43a15.26 15.26 0 0 1 15.24 15.24c0 8.41-6.83 15.24-15.24 15.24-.58 0-1.18-.04-1.82-.13V32.16c0-2.2-.59-4.38-1.71-6.35zm-76.8 5.04h41.33c2.88 0 5.22-2.33 5.22-5.19V22.8h19.03c2.66 0 5.21 1.17 7 3.21 1.54 1.75 2.35 3.87 2.35 6.15v117.89c0 .53-.07 1.04-.14 1.53a3.61 3.61 0 0 0-.07.35c-.02.1-.03.2-.06.31-.04.2-.11.41-.2.65-.22.68-.46 1.24-.78 1.76-1.72 2.98-4.75 4.76-8.1 4.76H12.93c-5.16 0-9.36-4.2-9.36-9.36V32.16c0-5.16 4.2-9.36 9.36-9.36h19.05v2.85a5.2 5.2 0 0 0 5.19 5.19zm42.97-5.19c0 .89-.74 1.62-1.64 1.62H37.15a1.62 1.62 0 0 1-1.62-1.62v-8.46c0-.9.73-1.64 1.62-1.64h8.25c.97 0 1.75-.76 1.79-1.72.25-5.72 4.91-10.2 10.62-10.2s10.42 4.48 10.65 10.2c.04.96.82 1.72 1.79 1.72h8.26a1.65 1.65 0 0 1 1.64 1.64zm56.99 78.45l-1.96 2.89c-.86 1.27-.92 2.98-.15 4.37.95 1.68 1.71 3.51 2.25 5.43.44 1.55 1.66 2.69 3.2 2.99l3.42.65c.23.04.4.25.4.51v4.7c0 .25-.17.46-.42.51l-3.43.64c-1.54.3-2.76 1.45-3.2 3.01-.55 1.96-1.3 3.79-2.25 5.43-.79 1.39-.74 3.11.15 4.37l1.96 2.89c.15.21.12.49-.07.68l-3.31 3.31c-.2.18-.45.21-.67.06l-2.89-1.96c-1.27-.86-2.98-.92-4.37-.15-1.61.93-3.43 1.68-5.41 2.22-1.55.44-2.69 1.66-2.99 3.2l-.65 3.44c-.04.22-.27.41-.51.41h-1.17c.14-.43.28-.88.37-1.33.16-.79.24-1.56.24-2.37v-10.87c7.98-.89 14.16-7.76 14.16-15.86s-6.18-14.94-14.16-15.85V92.84l.56.03c.25 0 .46.17.51.42l.64 3.43c.3 1.54 1.45 2.76 3.02 3.2 1.97.54 3.79 1.29 5.4 2.22 1.39.8 3.11.73 4.37-.15l2.89-1.96c.21-.14.48-.12.65.04l3.33 3.33a.52.52 0 0 1 .07.68zm-21.45 31.42v-24.36c6.07.87 10.58 6.01 10.58 12.18s-4.51 11.28-10.58 12.18z" fill="#1d1d1b"/></svg>
@@ -37,13 +37,13 @@ const bannerImage = {
                         Identification des Apps et Data à migrer
                     </li>
                     <li>
-                        Choix des technologies et des partenaires : Cloud privé / public / hybride
+                        Choix des technologies et des partenaires&nbsp;: Cloud privé / public / hybride
                     </li>
                     <li>
-                        Choix des Services : IaaS, PaaS, SaaS
+                        Choix des Services&nbsp;: IaaS, PaaS, SaaS
                     </li>
                     <li>
-                        Accompagnement au changement : organisation, compétences et formations
+                        Accompagnement au changement&nbsp;: organisation, compétences et formations
                     </li>
                 </Fragment>
             </ListCard>
@@ -51,10 +51,10 @@ const bannerImage = {
                 <svg slot="svg" class="w-auto h-20" viewBox="0 0 162.56 162.56"><path d="M143.28 0c-10.62 0-19.26 8.64-19.26 19.26 0 9.42 6.75 17.4 16.05 18.97l1.18.2v16.7H83.3v-16.7l1.18-.2c9.3-1.57 16.05-9.55 16.05-18.97C100.53 8.64 91.89 0 81.27 0S62.01 8.64 62.01 19.26c0 9.42 6.75 17.4 16.05 18.97l1.18.2v16.7H21.29v-16.7l1.18-.2c9.3-1.57 16.05-9.55 16.05-18.97C38.52 8.64 29.88 0 19.26 0S0 8.64 0 19.26c0 9.42 6.75 17.4 16.05 18.97l1.18.2v18.73c0 1.12.91 2.04 2.04 2.04h59.98v16.6H36.49a8.94 8.94 0 0 0-8.93 8.93v13.78c0 2.19.81 4.3 2.29 5.95l.84.94-.84.94c-1.48 1.65-2.29 3.76-2.29 5.95v13.78c0 2.19.81 4.3 2.29 5.95l.84.94-.84.94c-1.48 1.65-2.29 3.76-2.29 5.95v13.78a8.94 8.94 0 0 0 8.93 8.93h89.58a8.94 8.94 0 0 0 8.93-8.93v-13.78c0-2.19-.82-4.3-2.29-5.95l-.85-.94.85-.94c1.48-1.65 2.29-3.76 2.29-5.95v-13.78c0-2.19-.82-4.3-2.29-5.95l-.85-.94.85-.94c1.48-1.65 2.29-3.76 2.29-5.95V84.73a8.94 8.94 0 0 0-8.93-8.93H83.31V59.2h59.98c1.12 0 2.04-.91 2.04-2.04V38.43l1.18-.2c9.3-1.57 16.05-9.55 16.05-18.97C162.56 8.64 153.92 0 143.3 0zM4.05 19.26c0-8.38 6.82-15.19 15.19-15.19s15.19 6.82 15.19 15.19-6.81 15.19-15.19 15.19S4.05 27.63 4.05 19.26zm126.86 134.38c0 2.68-2.18 4.86-4.86 4.86H36.47c-2.68 0-4.86-2.18-4.86-4.86v-13.78c0-2.68 2.18-4.86 4.86-4.86h89.58c2.68 0 4.86 2.18 4.86 4.86zm0-27.56c0 2.68-2.18 4.86-4.86 4.86H36.47c-2.68 0-4.86-2.18-4.86-4.86V112.3c0-2.68 2.18-4.86 4.86-4.86h89.58c2.68 0 4.86 2.18 4.86 4.86zm-4.86-46.2c2.68 0 4.86 2.18 4.86 4.86v13.78c0 2.68-2.18 4.86-4.86 4.86H36.47c-2.68 0-4.86-2.18-4.86-4.86V84.74c0-2.68 2.18-4.86 4.86-4.86zM81.26 34.46c-8.38 0-15.19-6.82-15.19-15.19S72.89 4.08 81.26 4.08s15.19 6.82 15.19 15.19-6.81 15.19-15.19 15.19zm62.02 0c-8.38 0-15.19-6.82-15.19-15.19s6.81-15.19 15.19-15.19 15.19 6.82 15.19 15.19-6.82 15.19-15.19 15.19z"/><path d="M139.84 15.81h6.89v6.89h-6.89z" fill="#fff042"/><path d="M77.82 15.81h6.89v6.89h-6.89z" fill="#e94266"/><path d="M67.48 88.17h6.89v6.89h-6.89zm-13.78 0h6.89v6.89H53.7z"/><path d="M39.91 88.17h6.89v6.89h-6.89z" fill="#fff042"/><path d="M67.48 115.74h6.89v6.89h-6.89z" fill="#e94266"/><path d="M53.7 115.74h6.89v6.89H53.7zm-13.79 0h6.89v6.89h-6.89zm27.57 27.56h6.89v6.89h-6.89z"/><path d="M53.7 143.3h6.89v6.89H53.7z" fill="#71c8e2"/><path d="M39.91 143.3h6.89v6.89h-6.89z"/><path d="M15.8 15.81h6.89v6.89H15.8z" fill="#71c8e2"/><path d="M98.49 88.17h24.12v6.89H98.49z" fill="#e94266"/><path d="M98.49 115.74h24.12v6.89H98.49z" fill="#71c8e2"/><path d="M98.49 143.3h24.12v6.89H98.49z" fill="#fff042"/></svg>
                 <Fragment slot="list">
                     <li>
-                        Cloud Plateform Design: services, architexture, réseau, sécurité, IAM ...
+                        Cloud Plateform Design&nbsp;: services, architexture, réseau, sécurité, IAM...
                     </li>
                     <li>
-                        Cloud Platform Building : sourcing, mise en œuvre des fondations ...
+                        Cloud Platform Building&nbsp;: sourcing, mise en œuvre des fondations...
                     </li>
                     <li>
                         Migration et déploiement des Apps
@@ -74,7 +74,7 @@ const bannerImage = {
                         Culture DevOps / SecOps / NetOps
                     </li>
                     <li>
-                        Intégration et déploiement continu : pipeline CI/CD ...
+                        Intégration et déploiement continu&nbsp;: pipeline CI/CD...
                     </li>
                     <li>
                         Automatisation et standardisation
@@ -86,7 +86,7 @@ const bannerImage = {
             </ListCard>
         </div>
     </section>
-    <section class="relative w-full bg-gray-log py-14 px-3">
+    {/*<section class="relative w-full bg-gray-log py-14 px-3">
         <div class="flex flex-col gap-10 max-w-8xl mx-auto">
             <h1 class="inline-flex items-center gap-8 font-bold text-4xl uppercase tracking-wide">
                 Notre écosystème technologique
@@ -117,5 +117,5 @@ const bannerImage = {
         bgColor={BackgroundColor.BLUE}
         textColor={TextColor.BLACK}
         href="/nous-rejoindre"
-    />
+    />*/}
 </BaseLayout>
