Update text content of other pages and add job and blog content

--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -15,8 +15,8 @@
                         <p>75003 Paris</p>
                     </div>
                     <div class="flex flex-col gap-1 lg:gap-0">
-                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@wearelog.fr">contact@log.consulting</a>
-                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:recrutement@wearelog.fr">recrutement@log.consulting</a>
+                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@wearelog.fr">contact@wearelog.fr</a>
+                        <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:recrutement@wearelog.fr">recrutement@wearelog.fr</a>
                     </div>
                 </div>
                 <div class="relative flex items-center my-auto">
