--- a/src/layouts/JobOfferLayout.astro
+++ b/src/layouts/JobOfferLayout.astro
@@ -42,10 +42,16 @@ const { title, email } = Astro.props as Props;
                 <li class="my-6">
                     Nos valeurs ? Expertise, Sur-mesure, Collaboration et Responsabilité
                 </li>
-                <li class="my-6">
-                    Pourquoi nous rejoindre ? Chez LOG, nous sommes flexibles et agiles, et cela commence dès le processus de recrutement qui ne dépasse pas 15 jours ! Pour votre onboarding, nous prévoyons une véritable période d'intégration (entre 10 jours et 5 semaines selon le profil) au cours de laquelle vous ferez connaissance avec l'équipe, la SI interne et les méthodes de travail LOG. Une fois en mission, vous aurez deux entretiens par mois avec un manager coach (un déjeuner + une visio), des formations ainsi que des certifications illimitées (intégralement prises en charge par LOG), des meetups et des afterworks tous les mois avec l'équipe, des primes de cooptation allant de 1000€ à 3000€. Le télétravail fait partie de la culture d'entreprise. Vous bénéficierez également d'une excellente mutuelle, de tickets restaurant à 9€, de RTT.
-                </li>
             </ul>
+            <p class="text-xl md:text-2xl font-bold mb-12">
+                Pourquoi nous rejoindre ?
+            </p>
+            <p class="text-xl md:text-2xl mb-12">
+                Chez LOG, nous sommes flexibles et agiles, et cela commence dès le processus de recrutement qui ne dépasse pas 15 jours !<br /><br />
+                Pour votre onboarding, nous prévoyons une véritable période d'intégration (entre 10 jours et 5 semaines selon le profil) au cours de laquelle vous ferez connaissance avec l'équipe, la SI interne et les méthodes de travail LOG.<br /><br />
+                Une fois en mission, vous aurez deux entretiens par mois avec un manager coach (un déjeuner + une visio), des formations ainsi que des certifications illimitées (intégralement prises en charge par LOG), des meetups et des afterworks tous les mois avec l'équipe, des primes de cooptation allant de 2000€ à 3000€.<br /><br />
+                Le télétravail fait partie de la culture d'entreprise. Vous bénéficierez également d'une excellente mutuelle, de tickets restaurant à 9€, de RTT.
+            </p>
             <div class="text-center">
                 <a class="bg-blue-log rounded-xl text-center font-extrabold text-white text-2xl md:text-3xl px-28 py-3" href={`mailto:${email}`}>Postulez</a>
             </div>
