--- a/src/components/ui/call_to_action.astro
+++ b/src/components/ui/call_to_action.astro
@@ -17,7 +17,7 @@ const { title, text, button, image, bgColor, textColor, href } = Astro.props as 
     <div class="flex flex-col lg:flex-row place-content-center">
         <div class="relative flex basis-3/8 bg-gray-log -translate-y-8 lg:translate-y-0">
             <div class="absolute border-3 rounded-3xl border-black w-screen-2/3 lg:w-screen-1/3 translate-x-screen-1/6 lg:translate-x-screen-1/24 h-[calc(100%+4rem)] -translate-y-8"></div>
-            <img class="w-full h-full" src={image} width="" height="" alt="" />
+            <img class="w-full h-full object-cover object-left" src={image} width="" height="" alt="" />
         </div>
         <div class="flex flex-col items-center p-8 lg:p-20 basis-3/8 bg-black text-white">
             <div class="flex flex-col gap-12 max-w-lg">
