--- a/src/layouts/JoinUsLayout.astro
+++ b/src/layouts/JoinUsLayout.astro
@@ -3,12 +3,12 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 
 import SectionTitle from "@components/ui/section_title.astro";
 
-import HommeClavierReference from "@static/homme-clavier.avif";
+import HommeClavierReference from "@static/Alex_loggez-vous.avif";
 ---
 
 <BaseLayout title="Rejoignez-nous">
     <section class="relative w-full">
-        <div class="absolute h-[32rem] top-[160px] lg:top-auto lg:bottom-0 left-[calc(50vw-170px)] lg:left-[calc(50vw-100px)]">
+        <div class="absolute h-[32rem] top-[160px] lg:top-auto lg:bottom-0 left-[calc(50vw-170px)] lg:left-[calc(50vw-140px)]">
             <img class="h-full w-auto" src={HommeClavierReference} width="396" height="672" alt="Homme avec un clavier" />
         </div>
         <div class="flex flex-col lg:flex-row min-h-[34rem]">
@@ -26,8 +26,6 @@ import HommeClavierReference from "@static/homme-clavier.avif";
                 <div class="flex flex-col items-center gap-6 lg:gap-20 mx-auto lg:mx-[15vw] pt-48 pb-8 lg:py-24 z-0">
                     <p class="text-2xl mb-4 max-w-lg">
                         Vous avez envie de rejoindre une équipe dynamique, experte et engagée ?
-                        <br />
-                        Vous souhaitez mettre vos compétences au service de xxxx
                     </p>
                     <p class="font-bold text-3xl">
                         Rejoignez la tribu des loggers !
