Do not display the current article in the right panel

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -19,6 +19,6 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<BlogArticleLayout frontmatter={entry.data}>
+<BlogArticleLayout id={entry.id} frontmatter={entry.data}>
   <Content />
 </BlogArticleLayout>
