--- a/src/components/homepage/section_articles.astro
+++ b/src/components/homepage/section_articles.astro
@@ -11,7 +11,7 @@ const allBlogEntries = await getCollection("blog");
     <SectionTitle>
         <h1>Nos derniers articles</h1>
     </SectionTitle>
-    <div class="flex flex-col lg:flex-row gap-10 justify-center items-center mx-auto px-4 py-8">
+    <div class="flex flex-col lg:flex-row gap-10 justify-center items-stretch mx-auto px-4 py-8">
         {allBlogEntries.slice(0, 3).map((article) => (
             <ArticleCard
                 image={article.data.image}
