--- a/src/components/ui/article_card.astro
+++ b/src/components/ui/article_card.astro
@@ -14,8 +14,8 @@ const { image, title, description, class: className = "lg:flex", bgColor,  borde
 ---
 
 <a href={href}>
-    <div class={className + ` overflow-hidden flex-col items-center text-center max-w-sm border-2 ${borderColor} rounded-t-[20px] font-mono`}>
-            <img src={image} alt="Image d'un article" />
+    <div class={className + ` overflow-hidden flex-col items-center text-center max-w-sm border-2 ${borderColor} rounded-t-[20px] font-mono h-full`}>
+        <img src={image} alt="" />
         <p class={`${bgColor} border-y-2 border-y-black text-white text-2xl px-1 py-2 w-full`}>{title}</p>
         <p class="text-xl px-4 pt-6 line-clamp-3">{description}</p>
         <p class={`font-bold text-xl ${textColor} px-4 pt-3 pb-6`}>En savoir plus</p>
