--- a/src/components/homepage/section_wearelog.astro
+++ b/src/components/homepage/section_wearelog.astro
@@ -1,4 +1,6 @@
 ---
+import Icon from '@components/ui/icon.astro';
+
 import PictoOrdinateurReference from '@static/picto-ordinateur.avif';
 import PhotoSommaireReference from '@static/photo-sommaire.avif';
 ---
@@ -11,9 +13,9 @@ import PhotoSommaireReference from '@static/photo-sommaire.avif';
                 <h1 class="inline-flex gap-1 font-bold text-5xl mr-2">
                     <span>#WEARE</span>
                     <span class="sr-only">LOG</span>
-                    <svg class="w-auto h-16 fill-red-log" viewBox="0 0 214.89 120.31"><path d="M19.14 65.64V.11H0v82.7h50.5V65.64z"/><path d="M86.62.18c-23.73 0-43 18.75-43 42.38a42.39 42.39 0 0 0 6.43 23.08 4.33 4.33 0 0 0 .47.73c7.65 11.54 21 18.41 36.39 18.41 26.51 0 42.35-18.88 42.35-42.22C129.23 19.06 111.5.18 86.62.18zm-.26 67.95c-14.83 0-24.15-11.83-24.15-25.44s9.44-25.44 24.15-25.44c16.52 0 24.38 12.06 24.38 25.7s-8.64 25.18-24.38 25.18z"/><path d="M197.83 0v8.19a43 43 0 0 0-25.57-8c-23.73 0-43 18.75-43 42.38 0 21.27 13.54 36.59 32.16 41 .13 0 .29.08.44.1a40 40 0 0 0 9.65 1.17h1c9.78 0 18.1-2.57 24.72-7 .05 1.56.08 3.14.08 4.9 0 12.19-6.17 21.37-20.2 21.37-21.11 0-21.37-14.68-21.37-14.68H137.5c.91 16.39 14.55 30.94 37.89 30.94 22 0 39.5-11.26 39.5-39.08V0zM172 68.13a25.83 25.83 0 0 1-3.81-.29c-12.58-1.84-20.31-12.76-20.31-25.16 0-13.64 9.44-25.44 24.12-25.44h1.48.02c15.48.73 22.87 12.45 22.87 25.68.03 13.67-8.63 25.21-24.37 25.21z"/></svg>
+                    <Icon className="w-auto h-16 fill-red-log" name="log" />
                 </h1>
-                <img class="hidden md:block w-auto h-[3rem] ml-6" src={PictoOrdinateurReference} width="96" height="66" alt="" />
+                <Icon className="hidden md:block h-12 ml-6 fill-white" name="computer" />
             </div>
             <p class="font-bold text-2xl mt-8">Pure player du Conseil et de l'Expertise technique en technologies Cloud et culture DevOps</p>
         </div>
