--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -1,4 +1,5 @@
 ---
+import Icon from "@components/ui/icon.astro";
 ---
 
 <footer class="relative w-full bottom-0 bg-black text-white">
@@ -6,8 +7,8 @@
         <div class="py-10">
             <div class="relative flex flex-col lg:flex-row items-center lg:items-start gap-20">
                 <div class="flex-none overflow-hidden">
-                    <span class="sr-only">Page d'accuiil du site de LOG</span>
-                    <svg class="fill-white w-auto h-20" viewBox="0 0 214.89 120.31"><path d="M19.14 65.64V.11H0v82.7h50.5V65.64z"/><path d="M86.62.18c-23.73 0-43 18.75-43 42.38a42.39 42.39 0 0 0 6.43 23.08 4.33 4.33 0 0 0 .47.73c7.65 11.54 21 18.41 36.39 18.41 26.51 0 42.35-18.88 42.35-42.22C129.23 19.06 111.5.18 86.62.18zm-.26 67.95c-14.83 0-24.15-11.83-24.15-25.44s9.44-25.44 24.15-25.44c16.52 0 24.38 12.06 24.38 25.7s-8.64 25.18-24.38 25.18z"/><path d="M197.83 0v8.19a43 43 0 0 0-25.57-8c-23.73 0-43 18.75-43 42.38 0 21.27 13.54 36.59 32.16 41 .13 0 .29.08.44.1a40 40 0 0 0 9.65 1.17h1c9.78 0 18.1-2.57 24.72-7 .05 1.56.08 3.14.08 4.9 0 12.19-6.17 21.37-20.2 21.37-21.11 0-21.37-14.68-21.37-14.68H137.5c.91 16.39 14.55 30.94 37.89 30.94 22 0 39.5-11.26 39.5-39.08V0zM172 68.13a25.83 25.83 0 0 1-3.81-.29c-12.58-1.84-20.31-12.76-20.31-25.16 0-13.64 9.44-25.44 24.12-25.44h1.48.02c15.48.73 22.87 12.45 22.87 25.68.03 13.67-8.63 25.21-24.37 25.21z"/></svg>
+                    <span class="sr-only">Page d'accueil du site de LOG</span>
+                    <Icon className="fill-white w-auto h-20" name="log" />
                 </div>
                 <div class="relative flex flex-col gap-8 font-semibold text-xl">
                     <div class="flex flex-col">
@@ -23,15 +24,15 @@
                     <div class="flex items-center gap-2 ml-4 pl-4">
                         <a class="block" href="https://www.linkedin.com/company/wearelog/" target="_blank">
                             <span class="sr-only">LinkedIn</span>
-                            <svg class="w-9 h-9 fill-white" viewBox="0 0 105.54 105.54"><path d="M52.77 0C23.63 0 0 23.62 0 52.77s23.62 52.77 52.77 52.77 52.77-23.62 52.77-52.77S81.92 0 52.77 0zM35.31 82.38H22.36V40.77h12.95zm-6.48-47.01a7.55 7.55 0 1 1 0-15.1 7.55 7.55 0 1 1 0 15.1zm54.65 47.01H70.71V58.44c0-3.92-3.18-7.1-7.1-7.1s-7.1 3.18-7.1 7.1v23.94H43.5V40.83h12.1v5.73c6.76-11.04 27.89-9.67 27.89 8.48v27.34z"/></svg>
+                            <Icon className="w-9 h-9 fill-white" name="linkedin" />
                         </a>
                         <a class="ml-1 block" href="https://www.instagram.com/log_inside/" target="_blank">
                             <span class="sr-only">Instagram</span>
-                            <svg class="w-9 h-9 fill-white" viewBox="0 0 105.54 105.54"><path d="M52.77 0C23.63 0 0 23.62 0 52.77s23.62 52.77 52.77 52.77 52.77-23.62 52.77-52.77S81.92 0 52.77 0zm34.32 67.11c0 11.01-8.96 19.97-19.97 19.97H38.43c-11.01 0-19.97-8.96-19.97-19.97V38.42c0-11.01 8.96-19.97 19.97-19.97h28.69c11.01 0 19.97 8.96 19.97 19.97zM67.11 24.55H38.42c-7.65 0-13.88 6.22-13.88 13.88v28.69c0 7.65 6.22 13.88 13.88 13.88h28.69c7.65 0 13.88-6.22 13.88-13.88V38.43c0-7.65-6.22-13.88-13.88-13.88zM52.76 70.41a17.66 17.66 0 0 1-17.64-17.64 17.66 17.66 0 0 1 17.64-17.64A17.66 17.66 0 0 1 70.4 52.77a17.66 17.66 0 0 1-17.64 17.64zM71.1 38.49c-2.23 0-4.04-1.81-4.04-4.04s1.81-4.04 4.04-4.04 4.04 1.81 4.04 4.04-1.81 4.04-4.04 4.04z"/><circle cx="28.547" cy="68.947" r="11.55" transform="rotate(337.5)"/></svg>
+                            <Icon className="w-9 h-9 fill-white" name="instagram" />
                         </a>
                         <a class="ml-1 block" href="https://www.youtube.com/watch?v=V_A7tOPuUBs" target="_blank">
                             <span class="sr-only">Youtube</span>
-                            <svg class="w-9 h-9 fill-white" viewBox="0 0 105.54 105.54"><path d="M52.77 0C23.63 0 0 23.62 0 52.77s23.62 52.77 52.77 52.77 52.77-23.62 52.77-52.77S81.92 0 52.77 0zm35.72 59.09c-.16 3.37-.41 7.57-.72 9.68-.73 5.55-4.03 8.75-10.19 9.32-4.39.37-12.46.81-24.77.81h-.09c-12.31 0-20.38-.44-24.77-.81-6.16-.57-9.46-3.77-10.19-9.32-.31-2.11-.56-6.31-.72-9.68-.16-3.32-.16-6.65 0-9.97.16-3.37.41-7.57.72-9.68.73-5.55 4.03-8.75 10.19-9.32 4.39-.37 12.46-.81 24.77-.81h.09c12.31 0 20.38.44 24.77.81 6.16.57 9.46 3.77 10.19 9.32.31 2.11.56 6.31.72 9.68.16 3.32.16 6.65 0 9.97zM44.95 41.37v25.45l19.87-12.71z"/></svg>
+                            <Icon className="w-9 h-9 fill-white" name="youtube" />
                         </a>
                     </div>
                 </div>
